# HITL

./: .gitignore  README.md  pyproject.toml
analysis/: analysis_1.txt
analysis/animalwise_oof_pipeline/: README.md
analysis/animalwise_oof_pipeline/configs/: local_smoke.yaml  server_animalwise.yaml
analysis/animalwise_oof_pipeline/scripts/: analyze_finished_run.py  build_meeting_update_deck.mjs  run_animalwise_oof.py
analysis/scripts/: build_results_metrics_workbook.mjs  compute_results_mask_metrics.py  verify_results_metrics_workbook.mjs
analysis/workspace_v0_full_external_analysis/: RUN_MANIFEST.md  interpretation_cn.md  plan_review_cn.md  report.md
analysis/workspace_v0_full_external_analysis/scripts/: workspace_v0_full_analysis.py
configs/: model.yaml  protocol.yaml  runtime.local.yaml  runtime.round1_correction.yaml  runtime.server.yaml
docs/: GUIDE.md
environments/: environment.base.yml  environment.linux-cuda.yml  environment.win-cuda.yml
next/: IMPLEMENTATION_AUDIT.md  README.md  run.py
next/configs/: local_smoke.yaml  server_next.yaml
next/scripts/: run_next_pipeline.py
plans/: Hemorrhage Segmentation.md
project plan/: 1.txt
scripts/: prepare_round1_import.ps1
src/hemorrhage/: __init__.py  app.py  cli.py  config.py  pipeline.py  revision_policy.py  utils.py
src/hemorrhage/data/: nifti.py
src/hemorrhage/protocol/: __init__.py  folds.py  metrics.py  rounds.py  selection.py
src/hemorrhage/review/: io.py  (+1 more)
tests/: __init__.py  helpers.py  test_prepost.py  test_protocol.py  test_revision_policy.py  test_smoke.py  test_training.py
(+9 files in other folders)
